changed src to github

--- a/Website/HTML/index.own.html
+++ b/Website/HTML/index.own.html
@@ -3,13 +3,13 @@
 <head>
 	<title>Staffplaner Login/Sign-up</title>
 	<meta charset="UTF-8">
-	<link rel='stylesheet' href='C:\Users\kieligerm\Desktop\Website\CSS\styles.css'/>
+	<link rel='stylesheet' href='https://github.com/ludes2/Projekt-1/tree/master/Website/CSS/styles.css'/>
 	
 </head>
 
 <body>
 
-<script src="C:\Users\kieligerm\Desktop\Website\JS\testScript.js"></script>
+<script src="https://github.com/ludes2/Projekt-1/blob/master/Website/JS/testScript.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 <div class='header'>
