add compareLatency function + comments

--- a/Website/HTML/index.own.html
+++ b/Website/HTML/index.own.html
@@ -40,7 +40,7 @@
 		<label>Beispieltext1</label> <br>
 		<input type="text" id="bsptxt1" onkeydown="keydownFunction()" onkeyup="keyupFunction()">
 		<button type="button" onclick="exportToFile()">Export to file</button>
-		<button type="button" onclick="compareInput()">Compare difference</button>
+		<button type="button" onclick="compareLatency()">Compare difference</button>
 		<p id="time"></p>
 		<p id="difference"></p>
 	</div>
