--- a/Website/HTML/index.own.html
+++ b/Website/HTML/index.own.html
@@ -3,7 +3,8 @@
 <head>
 	<title>Staffplaner Login/Sign-up</title>
 	<meta charset="UTF-8">
-	<link rel='stylesheet' href='../CSS/styles.css'/>
+	<link rel='stylesheet' href='../CSS/landingPage.css'/>
+	<link rel='stylesheet' href='../css/forms.css'/>
 	
 </head>
 
@@ -18,21 +19,33 @@
 </div>
 
 <div class='flex-container'>
-	<div class='login'><h2>Login</h2><br>
-		<label>Username</label> <br>
-		<input type='text' placeholder='Enter your Username' name='uname' required> <br>
-		<label>Password</label> <br>
-		<input type='password'placeholder='Enter your password' name='pw' required>
-	</div>
-	
-	<div class='sign-up'><h2>Sign-up</h2><br>
-		<label>E-Mailadress</label> <br>
-		<input type='text' placeholder='Enter your E-Mailadress' name='mail' required> <br>
-		<label>Password</label><br>
-		<input type='password'placeholder='Enter your password' name='pw' required><br>
-		<label>Confirm Password</label><br>
-		<input type='password'placeholder='confirm your password' name='pw' required><br>
-	</div>
+	<form action="../php/login.php" method="post">
+		<div class='login'><h2>Login</h2><br>
+			<label id="email">E-Mail</label> <br>
+			<input type='text' placeholder='Enter your email' name='email' required> <br>
+			<label id="loginPassword">Password</label> <br>
+			<input type='password'placeholder='Enter your password' name='password' required> <br>
+			<button type="submit">Login</button>
+
+		</div>
+	</form>
+	<form action="../php/registration.php" method="post">
+
+		<div class='sign-up'><h2>Sign-up</h2><br>
+			<label id="firstName">Vorname</label> <br>
+			<input type="text" placeholder="enter your first name" name="firstname" required> <br>
+			<label id="lastName">Nachname</label> <br>
+			<input type="text" placeholder="Enter your last name" name="lastname" required> <br>
+			<label id="mail">E-Mailadress</label> <br>
+			<input type='text' placeholder='Enter your E-Mailadress' name='email' required> <br>
+			<label id="sign-upPassword">Password</label> <br>
+			<input type='password'placeholder='Enter your password' name='sign-upPassword' required> <br>
+			<label id="confirmPassword">Confirm Password</label> <br>
+			<input type='password'placeholder='confirm your password' name='confirmPassword' required> <br>
+			<button type="submit">Sign-up</button>
+			<?php require "../php/registration.php";?>
+		</div>
+	</form>
 </div>
 
 <div class="exempleText">
