added file sqlchanges and added session for lgoin

--- a/Website/HTML/index.own.html
+++ b/Website/HTML/index.own.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class='flex-container'>
-	<form action="../php/login.php" method="post">
+	<form action="../php/authentication.php" method="post">
 		<div class='login'><h2>Login</h2><br>
 			<label id="email">E-Mail</label> <br>
 			<input type='text' placeholder='Enter your email' name='email' required> <br>
