save up to 5 entries

--- a/Website/PHP/index.own.html
+++ b/Website/PHP/index.own.html
@@ -61,7 +61,7 @@
 	<div class='test-capture'><h2>Test-Capture</h2><br>
 		<label>Beispieltext1</label> <br>
 		<input type="text" onkeydown="keydownFunction()" onkeyup="keyupFunction()">
-		<button type="submit" onclick="getInputFromDB()">Save Duration in DB</button>
+		<button type="submit" onclick="sendInputToPHP();getInputFromDB();">Save Duration in DB</button>
 		<p id="time"></p>
 		<p id="difference"></p>
 	</div>
