--- a/Website/PHP/index.own.html
+++ b/Website/PHP/index.own.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class='flex-container'>
-	<form action="../php/authentication.php" method="post">
+	<form action="../PHP/authentication.php" method="post">
 		<div class='login'><h2>Login</h2><br>
 			<label id="email">E-Mail</label> <br>
 			<input type='text' placeholder='Enter your email' name='email' required> <br>
@@ -56,7 +56,7 @@
 </form>
 
 
-<form action="../php/validateInput.php" method="post">
+<form action="../PHP/validateInput.php" method="post">
 <div>
 	<div class='test-capture'><h2>Test-Capture</h2><br>
 		<label>Beispieltext1</label> <br>
