--- a/PHP/index.own.html
+++ b/PHP/index.own.html
@@ -58,7 +58,7 @@
 
 
 
-	<form action="../controllers/duration_controller.php" method="post">
+	<form action="../PHP/durationHandler.php" method="post">
 
 <div>
 	<div class='test-capture'><h2>Test-Capture</h2><br>
